@@ -321,7 +321,7 @@ a.cancel-remove {
 
 /* Voeg een lidmaatschap toe - TODO: test! */
 input#library {
-  width: 90% !important;
+  width: 80% !important;
 }
 
 
