@@ -183,9 +183,11 @@ Openstaande oranje puntjes eerste Google Doc:
 
 2. Velden in formulier "contact" even breed
 - stylesheet aangepast - zie contact.html
+--- Feedback Joeri: op mobile mogen die volgens mij 100% zijn. Ik merkte wel dat een textarea geen 100% was, dit is aangepast in de stylesheet
 
 3. padding toevoegen 
 - graag voorbeeld van waar precies, wat bedoelen ze juist?
+--- Feedback Joeri: stylesheet aangepast, ik weet wel niet of dit browser-compatibel is. In gesimuleerde mobile modus (Firefox) is het ok.
 
 4. bibliotheek-pagina: onderverdeling tussen titels (reserveringen - bib naam) duidelijker
 - stylesheet aangepast
@@ -214,6 +216,7 @@ TBD
 
 12. Voeg een lidmaatschap toe: tekstveld breder
 - stylesheet aangepast - te testen!
+--- Feedback Joeri: Nu ingesteld op 80%. Op mobile laten staan op 90%.
 
 13. Mijn bibliotheken: namen lijken op links
 - vervang class="title" bij de naam door class="lid". Stylesheet aangepast.
@@ -233,7 +236,11 @@ TBD
 18. Knoppen die links mogen worden: x annuleer reservering - x verwijder dit lidmaatschap - x verwijder je mijn bib profiel
 - voeg class="cancel-remove" toe aan de <a> tag. Stylesheet aangepast. Sprite aangepast.
   Op 'Mijn Bibliotheken' pagina: <a class="cancel-remove"> (dus classes "link red" mogen weg). Doe ook de <br>-tags weg tussen deze en de vorige <a>
-- Feedback Joeri: padding toegevoegd enz
+--- Feedback Joeri: padding toegevoegd enz
 
 19. (opmerking 09.07) voeg lidmaatschap toe: invulvelden niet zo breed
 - Te checken: bij mij zijn die even breed als op de vorige pagina (breedte van het formulier is 6 columns)
+--- 
+
+--. Extra opmerking: icoontje ">" komt over text bij "volgende" knop
+- Stylesheet aangepast voor desktop. Voor mobile was dit geen issue.
